# CCourse

./: .gitignore  CMakeLists.txt  Makefile  README.md  clist.c  clist.h  main.c
inc/: tree_display.h
inc/examples/: tree_examples.h
src/: main.c  tree_display.c
src/examples/: binary_tree_example.c  binary_tree_only_data_example.c  ternary_tree_example.c  unary_tree_example.c
